<?xml version="1.0"?>
<package format="2">
  <name>hand_test</name>
  <version>0.0.0</version>
  <description>The hand_test package</description>
  <maintainer email="shigeikuo@gmail.com">Ikuo Shige</maintainer>

  <author email="tiryoh@gmail.com">Daisuke Sato</author>                  
  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>

  <license>NON-COMMERCIAL LICENSE AGREEMENT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
